// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complete [block completion] =#57622108-1337-4edd-833a-2557835bcfe0. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
          "type": "id",
          "value": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "hide": true,
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "findKey": Object {
            "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
            "type": "id",
            "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          },
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "type": "number",
        "valuePrefix": "#CurrentBlock.",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 26,
    "preview": undefined,
    "replacements": Array [
      "#CurrentBlock.varvarabcva",
      "#CurrentBlock.varvarabcv",
      "#CurrentBlock.varvarabc",
      "#CurrentBlock.varvarab",
      "#CurrentBlock.varvara",
      "#CurrentBlock.varvar",
      "#CurrentBlock.varva",
      "#CurrentBlock.varv",
      "#CurrentBlock.var",
      "#CurrentBlock.va",
      "#CurrentBlock.v",
      "#CurrentBlock.",
      "#CurrentBlock",
      "varvarabcva",
      "varvarabcv",
      "varvarabc",
      "varvarab",
      "varvara",
      "varvar",
      "varva",
      "varv",
      "var",
      "va",
      "v",
    ],
    "value": "#CurrentBlock.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [dot equal different namespaceId] = 1 + varvarabcvar. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "varvarabcvar",
      "errors": Array [
        Object {
          "message": "Unknown function varvarabcvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "CURRENT_POSITION()",
        "errors": Array [],
        "hide": false,
        "type": "any",
      },
    ],
    "kind": "function",
    "name": "CURRENT_POSITION",
    "namespace": "core",
    "positionChange": 17,
    "preview": undefined,
    "replacements": Array [
      "CURRENT_POSITION(",
      "CURRENT_POSITION",
      "CURRENT_POSITIO",
      "CURRENT_POSITI",
      "CURRENT_POSIT",
      "CURRENT_POSI",
      "CURRENT_POS",
      "CURRENT_PO",
      "CURRENT_P",
      "CURRENT_",
      "CURRENT",
      "CURREN",
      "CURRE",
      "CURR",
      "CUR",
      "CU",
      "C",
    ],
    "value": "CURRENT_POSITION()",
    "weight": 0,
  },
}
`;

exports[`Complete [dot equal same namespaceId] = 1 + varvarabcvar. 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
          "type": "id",
          "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        },
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [
        Object {
          "message": "Missing expression",
          "type": "syntax",
        },
        Object {
          "message": "Parse error: \\"\\"",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "findKey": Object {
            "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
            "type": "id",
            "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          },
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "type": "number",
        "valuePrefix": "#CurrentBlock.",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 26,
    "preview": undefined,
    "replacements": Array [
      "#CurrentBlock.varvarabcva",
      "#CurrentBlock.varvarabcv",
      "#CurrentBlock.varvarabc",
      "#CurrentBlock.varvarab",
      "#CurrentBlock.varvara",
      "#CurrentBlock.varvar",
      "#CurrentBlock.varva",
      "#CurrentBlock.varv",
      "#CurrentBlock.var",
      "#CurrentBlock.va",
      "#CurrentBlock.v",
      "#CurrentBlock.",
      "#CurrentBlock",
      "varvarabcva",
      "varvarabcv",
      "varvarabc",
      "varvarab",
      "varvara",
      "varvar",
      "varva",
      "varv",
      "var",
      "va",
      "v",
    ],
    "value": "#CurrentBlock.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var equal different namespaceId with namespaceId] =Untitled.varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
          "type": "id",
          "value": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "id": "57622108-1337-4edd-833a-2557835bcfe0",
        "kind": "Block",
        "name": "Untitled",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Block",
      "display": "Untitled",
      "errors": Array [],
      "hide": false,
      "type": "Block",
    },
    Object {
      "attrs": undefined,
      "code": "Dot",
      "display": ".",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
          "type": "id",
          "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        },
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "CURRENT_POSITION()",
        "errors": Array [],
        "hide": false,
        "type": "any",
      },
    ],
    "kind": "function",
    "name": "CURRENT_POSITION",
    "namespace": "core",
    "positionChange": 17,
    "preview": undefined,
    "replacements": Array [
      "CURRENT_POSITION(",
      "CURRENT_POSITION",
      "CURRENT_POSITIO",
      "CURRENT_POSITI",
      "CURRENT_POSIT",
      "CURRENT_POSI",
      "CURRENT_POS",
      "CURRENT_PO",
      "CURRENT_P",
      "CURRENT_",
      "CURRENT",
      "CURREN",
      "CURRE",
      "CURR",
      "CUR",
      "CU",
      "C",
    ],
    "value": "CURRENT_POSITION()",
    "weight": 0,
  },
}
`;

exports[`Complete [var equal different namespaceId] =varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "varvarabcvar",
      "errors": Array [
        Object {
          "message": "Unknown function varvarabcvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "CURRENT_POSITION()",
        "errors": Array [],
        "hide": false,
        "type": "any",
      },
    ],
    "kind": "function",
    "name": "CURRENT_POSITION",
    "namespace": "core",
    "positionChange": 17,
    "preview": undefined,
    "replacements": Array [
      "CURRENT_POSITION(",
      "CURRENT_POSITION",
      "CURRENT_POSITIO",
      "CURRENT_POSITI",
      "CURRENT_POSIT",
      "CURRENT_POSI",
      "CURRENT_POS",
      "CURRENT_PO",
      "CURRENT_P",
      "CURRENT_",
      "CURRENT",
      "CURREN",
      "CURRE",
      "CURR",
      "CUR",
      "CU",
      "C",
    ],
    "value": "CURRENT_POSITION()",
    "weight": 0,
  },
}
`;

exports[`Complete [var equal same namespaceId] =varvarabcvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": Object {
        "findKey": Object {
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
          "type": "id",
          "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        },
        "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
        "kind": "Variable",
        "name": "varvarabcvar",
        "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
      },
      "code": "Variable",
      "display": "varvarabcvar",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "findKey": Object {
            "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
            "type": "id",
            "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          },
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "type": "number",
        "valuePrefix": "#CurrentBlock.",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 26,
    "preview": undefined,
    "replacements": Array [
      "#CurrentBlock.varvarabcva",
      "#CurrentBlock.varvarabcv",
      "#CurrentBlock.varvarabc",
      "#CurrentBlock.varvarab",
      "#CurrentBlock.varvara",
      "#CurrentBlock.varvar",
      "#CurrentBlock.varva",
      "#CurrentBlock.varv",
      "#CurrentBlock.var",
      "#CurrentBlock.va",
      "#CurrentBlock.v",
      "#CurrentBlock.",
      "#CurrentBlock",
      "varvarabcva",
      "varvarabcv",
      "varvarabc",
      "varvarab",
      "varvara",
      "varvar",
      "varva",
      "varv",
      "var",
      "va",
      "v",
    ],
    "value": "#CurrentBlock.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var include different namespaceId] =1+arvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "arvar",
      "errors": Array [
        Object {
          "message": "Unknown function arvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": undefined,
        "code": "Function",
        "display": "CURRENT_POSITION()",
        "errors": Array [],
        "hide": false,
        "type": "any",
      },
    ],
    "kind": "function",
    "name": "CURRENT_POSITION",
    "namespace": "core",
    "positionChange": 17,
    "preview": undefined,
    "replacements": Array [
      "CURRENT_POSITION(",
      "CURRENT_POSITION",
      "CURRENT_POSITIO",
      "CURRENT_POSITI",
      "CURRENT_POSIT",
      "CURRENT_POSI",
      "CURRENT_POS",
      "CURRENT_PO",
      "CURRENT_P",
      "CURRENT_",
      "CURRENT",
      "CURREN",
      "CURRE",
      "CURR",
      "CUR",
      "CU",
      "C",
    ],
    "value": "CURRENT_POSITION()",
    "weight": 0,
  },
}
`;

exports[`Complete [var include same namespaceId] =1+arvar 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "arvar",
      "errors": Array [
        Object {
          "message": "Unknown function arvar",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "findKey": Object {
            "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
            "type": "id",
            "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          },
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "type": "number",
        "valuePrefix": "#CurrentBlock.",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 26,
    "preview": undefined,
    "replacements": Array [
      "#CurrentBlock.varvarabcva",
      "#CurrentBlock.varvarabcv",
      "#CurrentBlock.varvarabc",
      "#CurrentBlock.varvarab",
      "#CurrentBlock.varvara",
      "#CurrentBlock.varvar",
      "#CurrentBlock.varva",
      "#CurrentBlock.varv",
      "#CurrentBlock.var",
      "#CurrentBlock.va",
      "#CurrentBlock.v",
      "#CurrentBlock.",
      "#CurrentBlock",
      "varvarabcva",
      "varvarabcv",
      "varvarabc",
      "varvarab",
      "varvara",
      "varvar",
      "varva",
      "varv",
      "var",
      "va",
      "v",
    ],
    "value": "#CurrentBlock.varvarabcvar",
    "weight": 1,
  },
}
`;

exports[`Complete [var startWith same namespace] = 1 + var 1`] = `
Object {
  "codeFragments": Array [
    Object {
      "attrs": undefined,
      "code": "Equal",
      "display": "=",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "NumberLiteral",
      "display": "1",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Plus",
      "display": "+",
      "errors": Array [],
      "hide": false,
      "type": "number",
    },
    Object {
      "attrs": undefined,
      "code": "Space",
      "display": " ",
      "errors": Array [],
      "hide": false,
      "type": "any",
    },
    Object {
      "attrs": undefined,
      "code": "Function",
      "display": "var",
      "errors": Array [
        Object {
          "message": "Unknown function var",
          "type": "syntax",
        },
        Object {
          "message": "TODO mismatch token FunctionCall",
          "type": "parse",
        },
      ],
      "hide": false,
      "type": "any",
    },
  ],
  "firstCompletion": Object {
    "codeFragments": Array [
      Object {
        "attrs": Object {
          "findKey": Object {
            "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
            "type": "id",
            "value": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          },
          "id": "481b6dd1-e668-4477-9e47-cfe5cb1239d0",
          "kind": "Variable",
          "name": "varvarabcvar",
          "namespaceId": "57622108-1337-4edd-833a-2557835bcfe0",
        },
        "code": "Variable",
        "display": "varvarabcvar",
        "errors": Array [],
        "hide": false,
        "type": "number",
        "valuePrefix": "#CurrentBlock.",
      },
    ],
    "kind": "variable",
    "name": "varvarabcvar",
    "namespace": "Untitled",
    "positionChange": 26,
    "preview": undefined,
    "replacements": Array [
      "#CurrentBlock.varvarabcva",
      "#CurrentBlock.varvarabcv",
      "#CurrentBlock.varvarabc",
      "#CurrentBlock.varvarab",
      "#CurrentBlock.varvara",
      "#CurrentBlock.varvar",
      "#CurrentBlock.varva",
      "#CurrentBlock.varv",
      "#CurrentBlock.var",
      "#CurrentBlock.va",
      "#CurrentBlock.v",
      "#CurrentBlock.",
      "#CurrentBlock",
      "varvarabcva",
      "varvarabcv",
      "varvarabc",
      "varvarab",
      "varvara",
      "varvar",
      "varva",
      "varv",
      "var",
      "va",
      "v",
    ],
    "value": "#CurrentBlock.varvarabcvar",
    "weight": 1,
  },
}
`;
